--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="images/wedding.jpg">
+                            <img class="d-block w-100" src="images/engage.jpg">
                             <div class="carousel-caption d-none d-md block">
                                 <h5>Come celebrate Harrison and Samantha's Wedding!</h5>
                                 <p>RSVP Now</p>
