--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
     <div class="nav-scroller py-1 mb-2">
         <nav class="nav d-flex justify-content-between">
-            <a class="p-2 text-muted" href="#">Photos</a>
+            <a class="p-2 text-muted" href="photos.html">Photos</a>
             <a class="p-2 text-muted" href="#">Registry</a>
             <a class="p-2 text-muted" href="rsvp.html">RSVP</a>
             <a class="p-2 text-muted" href="#">Invitation</a>
