--- a/rsvp.html
+++ b/rsvp.html
@@ -34,11 +34,11 @@
     </header>
     <div class="nav-scroller py-1 mb-2">
         <nav class="nav d-flex justify-content-between">
-            <a class="p-2 text-muted" href="#">Photos</a>
-            <a class="p-2 text-muted" href="#">Registry</a>
-            <a class="p-2 text-muted" href="#">RSVP</a>
-            <a class="p-2 text-muted" href="#">Invitation</a>
-            <a class="p-2 text-muted" href="#">Connect</a>
+            <a class="p-2 text-muted" href="photos.html">Photos</a>
+            <a class="p-2 text-muted" href="registry.html">Registry</a>
+            <a class="p-2 text-muted" href="rsvp.html">RSVP</a>
+            <a class="p-2 text-muted" href="invitation.html">Invitation</a>
+            <a class="p-2 text-muted" href="connect.html">Connect</a>
 
         </nav>
     </div>
