--- a/invitation.html
+++ b/invitation.html
@@ -58,6 +58,14 @@
                     <button type="button" class="btn btn-dark btn-sm">
                         <a href="https://www.google.com/maps/dir/''/bethany+community+church+seattle+address/@47.6872494,-122.412139,12z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x54901417644a3473:0x6ba814f3d4da60f0!2m2!1d-122.3420993!2d47.6872707" style="color:inherit">Google Maps</a>
                     </button>
+                    <br><br><br>
+                    <h4>If you are traveling, we recommend the Marriott Hotel, <br>or use the Connect page to arrange to stay with another guest</h4><br>
+                    <button type="button" class="btn btn-dark btn-sm">
+                        <a href="https://www.marriott.com/search/findHotels.mi" style="color:inherit">Seattle Marriott</a>
+                    </button>
+                    <button type="button" class="btn btn-dark btn-sm">
+                        <a href="connect.html" style="color:inherit">Connect</a>
+                    </button>
 
 
     </main>
