--- a/connect.html
+++ b/connect.html
@@ -46,12 +46,10 @@
 
     <main role="main">
         <main role="main" class="container">
-            <div class="d-flex align-items-center p-3 my-3 text-white-50 bg-purple rounded box-shadow">
-                <img class="imgbanner" src="images/banner.jpg" >
-            </div>
 
+<br>
             <div class="my-3 p-3 bg-white rounded box-shadow">
-                <h6 class="border-bottom border-gray pb-2 mb-0">Connect with other Wedding Guests</h6>
+                <h3 class="border-bottom border-gray pb-2 mb-0"><b>Connect with other Wedding Guests</b></h3>
                 <div class="media text-muted pt-3">
                     <img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">
                     <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
@@ -156,13 +154,15 @@
                     <div class="row">
                         <div class="col">
                             <button type="button" class="btn btn-dark btn-lg">
-                                <a href="chatForm.html" style="color:inherit">Create an Account to Chat</a>
+
+                                <a href="https://www.messenger.com/" style="color:inherit">Connect with Facebook</a>
                             </button>
                         </div>
                         <div class="col">
                             <div class="rightdiv">
                             <button type="button" class="btn btn-dark btn-lg">
-                                <a href="https://www.messenger.com/" style="color:inherit">or Connect with Facebook</a>
+
+                                <a href="chatForm.html" style="color:inherit">or Create an Account</a>
                             </button>
                             </div>
                         </div>
