--- a/chatSetup.html
+++ b/chatSetup.html
@@ -46,12 +46,10 @@
 
     <main role="main">
         <main role="main" class="container">
-            <div class="d-flex align-items-center p-3 my-3 text-white-50 bg-purple rounded box-shadow">
-                <img class="imgbanner" src="images/banner.jpg" >
-            </div>
 
+            <br>
             <div class="my-3 p-3 bg-white rounded box-shadow">
-                <h6 class="border-bottom border-gray pb-2 mb-0">Connect with other Wedding Guests</h6>
+                <h3 class="border-bottom border-gray pb-2 mb-0"><b>Connect with other Wedding Guests</b></h3>
                 <div class="media text-muted pt-3">
                     <img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">
                     <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
@@ -151,6 +149,15 @@
                 </p>
             </div>
                 <br>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="basic-addon1">@RebeccaAndFamily</span>
+                    </div>
+                    <input type="text" class="form-control" placeholder="Type Message" aria-label="Username" aria-describedby="basic-addon1">
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-secondary" type="button">Chat</button>
+                    </div>
+                </div>
 
 
 
