--- a/photos.html
+++ b/photos.html
@@ -45,7 +45,7 @@
 <br><h1>Samantha's and Harrison's Wedding</h1><br>
     <div class="rightdiv">
         <button type="button" class="btn btn-dark btn-lg">
-            <a href="#" style="color:inherit">Upload Photos</a>
+            <a href="loginBasic.html" style="color:inherit">Upload Photos</a>
         </button>
     </div>
     <br>
