--- a/registry.html
+++ b/registry.html
@@ -45,7 +45,14 @@
 
     <main role="main">
 
-
+        <div class="centerdiv">
+            <br><br>
+            <h2>Samantha and Harrison</h2>
+            <h4>are registered at</h4>
+            <h6><a href="https://www.amazon.com/">Amazon</a></h6>
+            <h6><a href="https://www.williams-sonoma.com/">Wiliams Sonoma</h6>
+            <h6>and <a href="https://www.potterybarn.com/">Pottery Barn</h6><br>
+            
 
     </main>
 
