--- a/chatForm.html
+++ b/chatForm.html
@@ -55,7 +55,7 @@
             <div class="row">
                 <div class="col">
                     <button type="button" class="btn btn-dark btn-lg">
-                        <a href="connect.html" style="color:inherit">Login</a>
+                        <a href="chatSetup.html" style="color:inherit">Login</a>
                     </button>
                 </div>
                 <div class="col">
