--- a/photoupload.html
+++ b/photoupload.html
@@ -10,9 +10,9 @@
 
     <!-- Custom styles for this template -->
 
-
+    <link href="jumbotron.css" rel="stylesheet">
     <link href="blog.css" rel="stylesheet">
-    <link href="signin.css" rel="stylesheet">
+
 </head>
 <body>
 
@@ -44,31 +44,43 @@
     </div>
 
 
-    <body class="text-center">
-    <form class="form-signin">
+    <main role="main">
         <br><br>
-        <h1>Please enter the code found on your invitation</h1><br>
-        <input type="code" id="confirmCode" class="form-control" placeholder="Invitation Code" required autofocus>
-        <input type="code" id="confirmCode" class="form-control" placeholder="Username" required autofocus>
-        <input type="code" id="confirmCode" class="form-control" placeholder="Email" required autofocus><br>
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <button type="button" class="btn btn-dark btn-lg">
-                        <a href="photoupload.html" style="color:inherit">Login</a>
-                    </button>
+
                 </div>
                 <div class="col">
 
-                    <button type="button" class="btn btn-dark btn-lg">
-                        <a href="photoupload.html" style="color:inherit">Create</a>
-                    </button>
+
+
+                    <div class="card text-center" style="width: 100%">
+                        <div class="card-header" style="font-family: Harrington">
+                            File Upload
+                        </div>
+                        <div class="card-body"><br><br>
+                            <h5 class="card-title">Drag and Drop</h5>
+                            <h6>files from your computer</h6>
+                            <br><br>
+                        </div>
+                        <div class="card-footer text-muted">
+                            <button type="button" class="btn btn-dark btn-sm">
+                                <a href="#" style="color:inherit">Browse Files</a>
+                            </button>
+                        </div>
+                    </div>
+
+
+                </div>
+                <div class="col">
+
                 </div>
             </div>
-
         </div>
-    </form>
-    </body>
+
+
+    </main>
 
     <footer class="container">
         <p></p>
